--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@fortawesome/free-regular-svg-icons": "^5.13.1",
     "@fortawesome/free-solid-svg-icons": "^5.13.1",
     "bootstrap": "^4.5.0",
+    "chart.js": "^2.9.3",
     "firebase": "^7.16.0",
+    "ng2-charts": "^2.3.2",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
