--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@fortawesome/free-brands-svg-icons": "^5.13.1",
     "@fortawesome/free-regular-svg-icons": "^5.13.1",
     "@fortawesome/free-solid-svg-icons": "^5.13.1",
+    "@ngrx/effects": "^9.2.0",
+    "@ngrx/store": "^9.2.0",
     "bootstrap": "^4.5.0",
     "chart.js": "^2.9.3",
     "firebase": "^7.16.0",
