--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~9.0.0",
     "@angular/platform-browser-dynamic": "~9.0.0",
     "@angular/router": "~9.0.0",
+    "@auth0/angular-jwt": "^5.0.1",
     "@fortawesome/angular-fontawesome": "^0.7.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.29",
     "@fortawesome/free-brands-svg-icons": "^5.13.1",
@@ -33,6 +34,7 @@
     "firebase": "^7.16.0",
     "ng2-charts": "^2.3.2",
     "rxjs": "~6.5.4",
+    "rxjs-compat": "^6.6.2",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
