--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "@ngrx/store": "^9.2.0",
     "bootstrap": "^4.5.0",
     "chart.js": "^2.9.3",
-    "firebase": "^7.16.0",
+    "firebase": "^7.17.2",
+    "firebase-tools": "^8.7.0",
     "ng2-charts": "^2.3.2",
     "rxjs": "~6.5.4",
     "rxjs-compat": "^6.6.2",
@@ -49,12 +50,12 @@
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.3.0",
+    "karma": "^5.1.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
-    "protractor": "~5.4.3",
+    "protractor": "^7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
     "typescript": "~3.7.5"
