--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
     "@ngrx/store": "^9.2.0",
     "bootstrap": "^4.5.0",
     "chart.js": "^2.9.3",
+    "file-saver": "^2.0.2",
     "firebase": "^7.17.2",
     "firebase-tools": "^8.7.0",
     "ng2-charts": "^2.3.2",
     "rxjs": "~6.5.4",
     "rxjs-compat": "^6.6.2",
     "tslib": "^1.10.0",
+    "xlsx": "^0.16.6",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
